--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_svg: ^2.0.7
   intro_screen_onboarding_flutter: ^1.0.0
   curved_navigation_bar: ^1.0.3
+  firebase_core: ^2.15.0
+  firebase_auth: ^4.7.2
+
 
 
   # The following adds the Cupertino Icons font to your application.
