--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   curved_navigation_bar: ^1.0.3
   firebase_core: ^2.15.0
   firebase_auth: ^4.7.2
-
+  cloud_firestore: ^4.8.4
 
 
   # The following adds the Cupertino Icons font to your application.
