--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   firebase_core: ^2.15.0
   firebase_auth: ^4.7.2
   cloud_firestore: ^4.8.4
+  google_nav_bar: ^5.0.6
+
 
 
   # The following adds the Cupertino Icons font to your application.
